--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,6 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+tipos-variaveis/.vscode/settings.json
+git config --global user.name "brunoluizdev"
+git config --global user.email "ib2k@icloud.com"
